--- a/index.html
+++ b/index.html
@@ -56,32 +56,34 @@
             </form>
         </div>
     </section>
-    <section class="FAQ flex container">
-        <div class="ques">
-            <h1>
-                Why<br>Choosing Us
-            </h1>
-        </div>
-        <div class="heading">
-            <h1>Luxury facilities</h1>
-            <p>
-                The advantage of hiring a<br>workspace with us is that gives<br>you comfortable service and<br>all-around facilities.
-            </p>
-            <a href="#" class="info-btn">More Info  →</a>
-        </div>
-        <div class="heading">
-            <h1>Affordable Price</h1>
-            <p>
-                You can get a workspace of the<br>highest quality at an affordable<br>price and still enjoy the facilities<br>that are oly here.
-            </p>
-            <a href="#" class="info-btn">More Info  →</a>
-        </div>
-        <div class="heading">
-            <h1>Many Choices</h1>
-            <p>We provide many unique work<br>space choices so that you can<br>choose the workspace to<br>your liking.</p>
-            <a href="#" class="info-btn">More Info  →</a>
-        </div>
-    </section>
+    <main>
+        <section class="FAQ flex container">
+            <div class="ques">
+                <h1>
+                    Why<br>Choosing Us
+                </h1>
+            </div>
+            <div class="heading">
+                <h1>Luxury facilities</h1>
+                <p>
+                    The advantage of hiring a<br>workspace with us is that gives<br>you comfortable service and<br>all-around facilities.
+                </p>
+                <a href="#" class="info-btn">More Info  →</a>
+            </div>
+            <div class="heading">
+                <h1>Affordable Price</h1>
+                <p>
+                    You can get a workspace of the<br>highest quality at an affordable<br>price and still enjoy the facilities<br>that are oly here.
+                </p>
+                <a href="#" class="info-btn">More Info  →</a>
+            </div>
+            <div class="heading">
+                <h1>Many Choices</h1>
+                <p>We provide many unique work<br>space choices so that you can<br>choose the workspace to<br>your liking.</p>
+                <a href="#" class="info-btn">More Info  →</a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
 
